# f-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_registry_settings.py
docs/: pushing-to-f-server.md
examples/: ci-upload.sh
f_server/: cli.py  config.py  db.py  main.py  models.py
f_server/auth/: admin.py  api_keys.py
f_server/fdroid/: index.py  parse.py  sign.py
f_server/routers/: admin.py  repo.py  upload.py
f_server/security/: pinning.py
f_server/services/: notifications.py  rebuild.py
f_server/static/: style.css
f_server/storage/: __init__.py  base.py  local.py  s3.py
f_server/templates/: add_repository.html  home.html
f_server/templates/admin/: app.html  audit.html  base.html  index.html  keys.html  registry.html
tests/: apk_factory.py  test_admin_delete.py  test_admin_keys.py  test_auth.py  test_home.py  test_index.py  test_notifications.py  test_parse.py  test_rebuild_errors.py  test_registry_lock.py  test_repo.py  test_storage.py  test_upload_integration.py  test_upload_metadata.py
