[project]
name = "f-server"
version = "0.1.0"
description = "A multi-project, self-hosted F-Droid repository server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "argon2-cffi>=25.1.0",
    "authlib>=1.5.0",
    "boto3>=1.38.0",
    "fastapi>=0.115.0",
    "fdroidserver>=2.4.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
f-server = "f_server.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["f_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
